Create slicica added

--- a/Online_razmjena/Online_razmjena.csproj
+++ b/Online_razmjena/Online_razmjena.csproj
@@ -15,4 +15,9 @@
     <PackageReference Include="ReflectionIT.Mvc.Paging" Version="5.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\slicice\cover\" />
+    <Folder Include="wwwroot\slicice\gallery\" />
+  </ItemGroup>
+
 </Project>
