--- a/Online_razmjena/appsettings.json
+++ b/Online_razmjena/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Online_razmjena-803DCAF6-C09F-4189-B09D-4BCCF53392F4;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "Path": {
+    "Images": "wwwroot/slicice/post"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
